maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:9: error: ';' expected but 'else' found.
    }else
     ^